--- a/F03-ACQ/style.css
+++ b/F03-ACQ/style.css
@@ -19,6 +19,16 @@
     --mixwhite:#7a7a7a;
 }
 
+
+body::-webkit-scrollbar {
+    width: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--shadow-gray);
+    border-radius: 8px; 
+}
+
 #questionarea, #result-area {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
